--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>Notes</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+<html lang="en">
+  <%= render 'layouts/head'%>
 
-<%= yield %>
-
-</body>
+  <body>
+  	<%= render 'layouts/navbar'%>
+  	<%= render 'layouts/message'%>
+    <%= yield %>
+    <%= javascript_include_tag "application" %>
+  </body>
 </html>
