--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -1,6 +1,10 @@
-<% @notes.each do |note| %>
-	<p><%= link_to note.title, note%></p>
-	<p><%= note.body%></p>
-<% end %>
-
-<%= link_to 'Log Out', destroy_user_session_path, method: :delete if user_signed_in? %>
+<div class="row">
+	<% @notes.each do |note| %>
+		<% if note.shares.present? || note.user == current_user %>
+			<div class="panel">
+				<p><%= note.body%></p>
+				<p align = "center"><%= link_to note.title, note, class: 'button tiny round success'%></p>
+			</div>
+		<% end %>	
+	<% end %>
+</div>
