--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -1,9 +1,10 @@
 <div class="row">
 	<% @notes.each do |note| %>
-		<% if note.shares.present? || note.user == current_user %>
+		<% share = Share.find_by(shareable: note, user_id: current_user.id) %>
+		<% if share || note.user == current_user %>
 			<div class="panel">
 				<p><%= note.body%></p>
-				<p align = "center"><%= link_to note.title, note, class: 'button tiny round success'%></p>
+				<p align = "center"><%= link_to note.title, note, class: 'button tiny round success' %></p>
 			</div>
 		<% end %>	
 	<% end %>
