--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -13,7 +13,7 @@
           <%= link_to 'Notes', '#'%>
           <ul class="dropdown">
             <li> <%= link_to "New",new_note_path %></li>
-            <li> <%= link_to "My Notes",notes_path(uid: current_user.id) %></li>
+            <li> <%= link_to "My Notes",notes_path %></li>
           </ul>
        </li>   
           <li class="has-dropdown profile">
