--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -3,25 +3,8 @@
 	<p><%= @note.body %></p>
 	<p><% @note.tags.each do |tag| %><%= link_to "#{tag.name}(#{tag.notes.count})", notes_path(tag_name: tag.name, tag_id: tag.id), class: 'button success tiny round' %><% end %></p>
 	<p>Created <%= time_ago_in_words(@note.created_at) %> ago</p>
-	
-	<% if (@note.user == current_user) || Share.find_by(shareable: @note, user_id: current_user.id)&.updater? %>
-		<%= link_to 'Edit', edit_note_path(@note), class: "button success tiny" %>
-		<%= link_to ' Delete', note_path(@note), method: :delete, class: "button alert tiny" if @note.user == current_user%>
-	<% end %>
 
-	<% if (@note.user == current_user)%>
-		<h3>Shares</h3>
-		<%= form_for [@note, Share.new] do |f| %>
-		  <%= f.label :permission %>
-			<%= f.select :permission, Share.permissions.keys.map { |k| [k.humanize, k] }%>
-			<%= f.label :user %>
-			<%= f.select :user_id, User.all.map{|k| [k.email, k.id]} %>
-			<%= f.submit "Share", class: 'button tiny round' %>
-		<% end %>
-	<% end %>
-	
-	<ul>
-		<%= render @note.shares%>
-	</ul>
-
+	<% if current_user == @note.user && @note.shares.any? %>
+		<%= link_to "Manage Accesses", shares_path, class: 'button tiny round notice' %>
+	<% end %>	
 </div>
