--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -23,7 +23,7 @@
     </div>
 
     <div class="actions">
-      <%= f.submit "Sign up" class: 'button tiny round success' %>
+      <%= f.submit "Sign up", class: 'button tiny round success' %>
     </div>
   <% end %>
 
