--- a/app/views/shares/index.html.erb
+++ b/app/views/shares/index.html.erb
@@ -17,7 +17,7 @@
         <tr>
           <td><%= share.user.email %></td>
           <td><%= share.sharer.email %></td>
-          <td><%= share.permissions %></td>
+          <td><%= share.permission %></td>
           <td><%= share.shareable_type == "Note" ? share.shareable.body : share.shareable.note.body %></td> 
           <td><%= link_to 'Remove Access', share, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         </tr>
