--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -1,8 +1,12 @@
 <div class="row">
 <h3><%= @note.title %></h3>
 	<p><%= @note.body %></p>
-	<p><% @note.tags.each do |tag| %><%= link_to "#{tag.name}(#{tag.notes.count})", notes_path(tag_name: tag.name, tag_id: tag.id), class: 'button success tiny round' %><% end %></p>
-	<p>Created <%= time_ago_in_words(@note.created_at) %> ago</p>
+	<p><b>Tags:</b> <% @note.tags.each do |tag| %><%= link_to "#{tag.name} (#{tag.notes.count}), ", notes_path(tag_name: tag.name, tag_id: tag.id) %><% end %></p>
+  <% if @note.user == current_user %>
+    <%= link_to 'Edit', edit_note_path(@note), class: 'button tiny round warning'  %>
+    <%= link_to 'Destroy', @note, method: :delete, data: { confirm: 'Are you sure?' }, class: 'button tiny round alert'%>
+  <% end %>  
+  <p><small>Created <%= time_ago_in_words(@note.created_at) %> ago</small></p>
 
 	<% if current_user == @note.user && @note.shares.any? %>
 		<%= link_to "Manage Accesses", shares_path, class: 'button tiny round notice' %>
